# CHORD

./: CHECKER_RUN_2.md  CHECKER_RUN_REQUEST.md  CHORD_CONTINUITY.md  CURRENT_RELEASE_SYNC_REQUEST.md  README.md  RELEASE_STATUS.md  SYNC_NOTES.md  VALIDATION_REQUEST.md  config.example.toml  pyproject.toml
CHORD Compressed/: BOOTSTRAP_FOR_NEW_CONTINUITY.txt  MESSAGE_TO_NEW_CONTINUITY.txt  README_FIRST.txt
docs/: ARTIFACT_COLLECTION_GUIDE.md  BRANCHING_MODEL.md  CHANGELOG.md  CONFIG_REFERENCE.md  DEBUG_MODE_GUIDE.md  DEVELOPER_README.md  DOCUMENTATION_PACKAGE_SUMMARY.json  EXPECTED_OUTPUTS.md  GITHUB_PREINSTALL_CHECKER_CHANGELOG.md  GITHUB_PREINSTALL_CHECKER_PLAN.md  INSTALL.md  INSTALLER_BUILD_SUMMARY.json  INSTALLER_SCOPE.md  KNOWN_ISSUES.md  KNOWN_RISKS_FINAL_TEST.md  OPERATOR_ADMIN_README.md  RELEASE_NOTES_MASTER.md  RESET.md  ROLLBACK.md  TEST_INSTRUCTIONS_FINAL.md  UBUNTU_TEST_CYCLE_BUILD_SUMMARY.json  UBUNTU_TEST_CYCLE_PACKAGE_SCOPE.md  UBUNTU_TEST_CYCLE_SUMMARY.json  UPGRADE.md  WAVE_A_BUILD_SUMMARY.json  WAVE_A_LOCK_CHECKLIST.md  WAVE_A_RELEASE_NOTES.md  WAVE_B2_BUILD_SUMMARY.json  WAVE_B2_SCOPE.md  WAVE_B3_BUILD_SUMMARY.json  WAVE_B3_SCOPE.md  WAVE_C1_BUILD_SUMMARY.json  WAVE_C2_BUILD_SUMMARY.json  WAVE_C2_SCOPE.md  WAVE_C3_BUILD_SUMMARY.json  WAVE_C3_SCOPE.md  WAVE_C4_BUILD_SUMMARY.json  WAVE_C4_SCOPE.md  WAVE_D1_BUILD_SUMMARY.json  WAVE_D1_SCOPE.md  (+2 more)
installer/: chord-web.service  chord.env.example  deploy_release.sh  hard_reset.sh  install_chord.sh  install_chord_github_actions.sh  nginx_chord.conf  postgresql_bootstrap.sql  rollback_release.sh  soft_reset.sh
(+73 files in other folders)
