[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chord"
version = "0.1.0"
description = "CHORD Wave A Lock - Ubuntu foundation build"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "typer>=0.12",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "jinja2>=3.1"
]

[project.scripts]
chord = "chord.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
